--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
   height:100vh ;
   width: 60vw;
   margin-left: 20rem;
+  margin-right: 20rem;
 }
 .page-title{
   display: flex;
@@ -114,30 +115,37 @@ justify-content: space-between;
   gap: 2rem;
   margin-top: 2rem;
 }
-.card{
-  /* width: 6rem; */
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
- 
 
-}
 .button-choose{
-  width: 7rem;
-  height: 6rem;
   cursor: pointer;
   text-align: center;
   border-radius: 10px;
-  
+  font-size: 4rem;
 }
-.emoji-img-choice{
-  width: 100%;
-  font-size: 3rem;
- display: flex;
- justify-content: center;
- align-self:center;
+.button-choose p{
+  font-size: 1.5rem;
 }
-.emoji_description{
-  font-size: 1rem;
+@media screen and (max-width:600px) {
+  .logo{
+    display: flex;
+    flex-direction: column;
+  }
+  .button-choose{
+    font-size: 2rem;
+
+  }
+  .button-choose p{
+    font-size: 1rem;
+  }
+  .container{
+  min-width: 100vw;
+  margin: 0;
+  }
+  .results{
+    font-size: 1rem;
+    flex-direction: column;
+  }
+  .text-result{
+    font-size: 1rem;
+  }
 }
